--- a/PORTIFÓLIO/index.html
+++ b/PORTIFÓLIO/index.html
@@ -4,36 +4,121 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFÓLIO</title>
-    <link rel="stylesheet" href="/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <style>
+        body {
+            background: linear-gradient(to right, #084057, #37b5d1); /* Gradiente em tons de azul */
+            color: #ffffff; /* Cor do texto */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 15px;
+            gap: 50px;
+            background-color: rgb(0, 0, 0);
+            border-radius: 50px;
+            padding: 30px;
+        }
+        ul.custom-ul {
+            margin-bottom: 0;
+            padding-left: 0; /* Remove o preenchimento padrão à esquerda */
+            list-style-type: none; /* Remove os marcadores padrão */
+        }
+        ul {
+            text-decoration: none;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            gap: 60px;
+            margin-bottom: 0%;
+        }
+        li:hover {
+            margin-top: -10px;
+            margin-bottom: -10px;
+            margin-left: -12px;
+            margin-right: -12px;
+            text-decoration: none;
+            background-color: rgb(116, 59, 163);
+            border-radius: 80px;
+            padding-left: 12px;
+            padding-right: 12px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        li {
+            text-decoration: none;
+            transition: all 0.5s ease;
+        }
+        .aspinhas {
+            width: 400px; /* Largura da sua imagem */
+            height: 400px; /* Altura automática para manter a proporção */
+            object-fit: cover; /* Mantém a proporção da imagem */
+            border-radius: 100%; /* Raio do arredondamento para fazer a imagem um círculo */
+            overflow: hidden; /* Esconde as partes da imagem fora do raio arredondado */
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+        .gira {
+            margin-top: 45px;
+            align-items: center;
+            display: flex;
+            gap: 30px;
+        }
+        .aspinhas:hover {
+            transform: scale(1.1); /* Aumenta o tamanho da imagem ao passar o mouse */
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* Adiciona uma sombra para destacar */
+        }
+        .gira h1 {
+            color: rgb(255, 255, 255);
+        }
+        .biografia h3 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 30px;
+            margin-left: 25px;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+
+        .custom-ul li a {
+            text-decoration: none;
+            color: #ffffff; /* Cor do texto dos links */
+        }
+        .custom-ul li a:hover {
+            color: #ffffff; /* Cor do texto ao passar o mouse sobre os links */
+        }
+    </style>
 </head>
 <body>
 
-<header>
-        <nav>
-            <ul class="custom-ul">
-                <li><a href="index.html">HOME</a> </li><!-- Link para a página inicial -->
-
-                <li><a href="sobre-mim.html">SOBRE MIM</a></li>
-
-                <!-- Adicione mais itens de menu conforme necessário -->
-                <li><a href="projetos.html">PROJETOS</a></li> <!-- Link para a página de projetos -->
-
-                <li><a href="contatos.html">CONTATOS</a> <!-- Link para a página de contatos --></li>
-            </ul>
-        </nav>
+<header class="container">
+    <nav>
+        <ul class="custom-ul">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="sobre-mim.html">SOBRE MIM</a></li>
+            <li><a href="projetos.html">PROJETOS</a></li>
+            <li><a href="contatos.html">CONTATOS</a></li>
+        </ul>
+    </nav>
 </header>
 
-<!-- Aqui você colocaria o conteúdo principal da sua página -->
-<section class="gira">
-<img class="aspinhas" src="imagens/aspas-leviatan-oficial.webp" alt="">
-<h1>ERICK SANTOS (ASPAS)</h1>
-</section>
-<section class="biografia">
-    <h3>Erick santos mais conhecido pelo nickname Aspas ou para os mais próximos aspinhas é um jogador profisional do famoso jogo Valorant criado pela empresa Riot Games e atualmente joga pela Org chilena Leviatan</h3>
-
+<section class="container gira">
+    <img class="aspinhas rounded-circle" src="imagens/aspas-leviatan-oficial.webp" alt="">
+    <h1>ERICK SANTOS (ASPAS)</h1>
 </section>
 
+<section class="container biografia">
+    <h3>Erick Santos, mais conhecido pelo nickname Aspas ou para os mais próximos Aspinhas, é um jogador profissional do famoso jogo Valorant, criado pela empresa Riot Games, e atualmente joga pela organização chilena Leviatan.</h3>
+</section>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRgO2Po4z1xlydbRYBx9kboC7Stj5l2l/Fq0I5gja" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+oQ1to0sNVg7pGlv1+8UxfBqKgVhDSOOhFJ" crossorigin="anonymous"></script>
 
 </body>
 </html>
