--- a/PORTIFÓLIO/Projetos.html
+++ b/PORTIFÓLIO/Projetos.html
@@ -5,13 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PORTFÓLIO</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css" integrity="sha512-IJEbgDEF7OeKJRa0MY2PApnyJHRIsgzCveek4ec8VWQ+7KG3ZSKVNYa5xP/Gh0hVP0Mwb+gBsk+GwR3JQGhQNg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <style>
-        body {
-            background: linear-gradient(to right, #084057, #37b5d1); /* Gradiente em tons de azul */
-            color: #ffffff; /* Cor do texto */
-            font-family: Arial, sans-serif;
+        html, body {
+            height: 100%;
             margin: 0;
             padding: 0;
+        }
+        body {
+            background: linear-gradient(180deg, #1f4f92, #37b5d1); /* Gradiente em tons de azul */
+            background-repeat: no-repeat; /* Impede a repetição do gradiente */
+            background-attachment: fixed; /* Faz o gradiente cobrir toda a altura da página */
+            color: #ffffff; /* Cor do texto */
+            font-family: "Poppins", sans-serif;
         }
         header {
             display: flex;
@@ -53,11 +65,47 @@
             text-decoration: none;
             transition: all 0.5s ease;
         }
-      
+        .aspinhas {
+            width: 400px; /* Largura da sua imagem */
+            height: 400px; /* Altura automática para manter a proporção */
+            object-fit: cover; /* Mantém a proporção da imagem */
+            border-radius: 100%; /* Raio do arredondamento para fazer a imagem um círculo */
+            overflow: hidden; /* Esconde as partes da imagem fora do raio arredondado */
+            margin-top: 20px;
+            margin-left: 20px;
+        }
+        .gira {
+            margin-top: 45px;
+            align-items: center;
+            display: flex;
+            gap: 30px;
+        }
+        .aspinhas:hover {
+            transform: scale(1.1); /* Aumenta o tamanho da imagem ao passar o mouse */
+            box-shadow: 0 0 10px rgba(255, 255, 255, 0.5); /* Adiciona uma sombra para destacar */
+        }
+        .gira h1 {
+            color: rgb(255, 255, 255);
+        }
+        .biografia h3 {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            margin-top: 30px;
+            margin-left: 25px;
+            font-family: 'Courier New', Courier, monospace;
+        }
+
+        .custom-ul li a {
+            text-decoration: none;
+            color: #ffffff; /* Cor do texto dos links */
+        }
+        .custom-ul li a:hover {
+            color: #ffffff; /* Cor do texto ao passar o mouse sobre os links */
+        }
     </style>
 </head>
 <body>
-
 <header class="container">
     <nav>
         <ul class="custom-ul">
@@ -68,18 +116,8 @@
         </ul>
     </nav>
 </header>
-
-<section class="container gira">
-    
-</section>
-
-<section class="container biografia">
-  
-</section>
-
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRgO2Po4z1xlydbRYBx9kboC7Stj5l2l/Fq0I5gja" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8sh+oQ1to0sNVg7pGlv1+8UxfBqKgVhDSOOhFJ" crossorigin="anonymous"></script>
-
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
