--- a/PORTIFÓLIO/sobre-mim.html
+++ b/PORTIFÓLIO/sobre-mim.html
@@ -8,7 +8,7 @@
     <style>
         .custom-ul li a {
             text-decoration: none;
-            color: #427bb1; /* Cor do texto dos links */
+            color: #ffffff; 
         }
         header {
             display: flex;
@@ -19,6 +19,9 @@
             background-color: rgb(0, 0, 0);
             border-radius: 50px;
             padding: 30px;
+        }
+        a {
+            text-decoration: none;
         }
         ul.custom-ul {
             margin-bottom: 0;
@@ -51,7 +54,7 @@
             transition: all 0.5s ease;
         }
         body {
-            background: linear-gradient(to right, #1f4f92, #37b5d1); /* Gradiente em tons de azul */
+            background: linear-gradient(180deg, #1f4f92, #37b5d1); /* Gradiente em tons de azul */
             color: #ffffff; /* Cor do texto */
             font-family: Arial, sans-serif;
             margin: 0;
@@ -68,6 +71,7 @@
             margin: 10px;
             overflow: hidden;
             position: relative;
+            margin-top: 50px;
             transition: transform 0.3s ease-out;
             width: 250px; /* Tamanho fixo para os cartões */
             height: 250px; /* Tamanho fixo para os cartões */
@@ -82,24 +86,30 @@
         .card:hover {
             transform: scale(1.05);
         }
+        .biografia {
+            max-width: 780px; /* Largura máxima para o texto da biografia */
+            margin-top: 20px;
+            margin-left: auto;
+            margin-right: auto;
+            text-align: center; /* Centraliza o texto */
+            margin-bottom: 30px;
+        }
+        .biografia h3 {
+            font-family: 'Courier New', Courier, monospace;
+            max-width: 750px; /* Largura máxima ajustada */
+            margin: 0 auto; /* Centraliza o conteúdo dentro do contêiner */
+        }
         .images-container {
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            margin-top: 60px;
-        }
-        .biografia {
-            max-width: 400px; /* Largura máxima para o texto da biografia */
-            margin-top: 60px;
-            margin-left: 20px; /* Espaçamento à esquerda */
-        }
-        .biografia h3 {
-            font-family: 'Courier New', Courier, monospace;
+            margin-top: 20px;
+            gap: 10px;
         }
     </style>
 </head>
 <body>
-    <header>
+    <header class="container">
         <nav>
             <ul class="custom-ul">
                 <li><a href="index.html">HOME</a></li>
@@ -109,36 +119,31 @@
             </ul>
         </nav>
     </header>
+    
 
     <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="biografia">
-                    <h3>Erick Santos, conhecido como Aspas, é um jogador profissional brasileiro de VALORANT esports. Nasceu em 15 de Junho de 2003 e atualmente representa o Brasil na organização colombiana Leviatan. Aspas é reconhecido por suas habilidades excepcionais e conquistas em campeonatos internacionais, incluindo o título no VCT Champions Tour Istambul.</h3>
-                </div>
+        <div class="images-container">
+            <div class="card">
+                <img class="card-img-top aspinhas" src="imagens/leviatan.jpg" alt="Leviatan">
             </div>
-            <div class="col-md-6">
-                <div class="images-container">
-                    <div class="card">
-                        <img class="card-img-top aspinhas" src="imagens/leviatan.jpg" alt="Leviatan">
-                    </div>
-                    <div class="card">
-                        <img class="card-img-top aspinhas" src="imagens/aspinhas.webp" alt="Aspinhas">
-                    </div>
-                    <div class="card">
-                        <img class="card-img-top aspinhas" src="imagens/loud.webp" alt="Loud">
-                    </div>
-                    <div class="card">
-                        <img class="card-img-top aspinhas" src="imagens/aspas-masters-islandia-final-optic.jpg" alt="Aspas Masters">
-                    </div>
-                    <div class="card">
-                        <img class="card-img-top aspinhas" src="imagens/asposas.webp" alt="Aspas Masters">
-                    </div>
-                    <div class="card">
-                        <img class="card-img-top aspinhas" src="imagens/aspas-leviatan-oficial.webp" alt="Aspas Leviatan">
-                    </div>
-                </div>
+            <div class="card">
+                <img class="card-img-top aspinhas" src="imagens/aspinhas.webp" alt="Aspinhas">
             </div>
+            <div class="card">
+                <img class="card-img-top aspinhas" src="imagens/loud.webp" alt="Loud">
+            </div>
+            <div class="card">
+                <img class="card-img-top aspinhas" src="imagens/aspas-masters-islandia-final-optic.jpg" alt="Aspas Masters">
+            </div>
+            <div class="card">
+                <img class="card-img-top aspinhas" src="imagens/asposas.webp" alt="Aspas Masters">
+            </div>
+            <div class="card">
+                <img class="card-img-top aspinhas" src="imagens/aspas-leviatan-oficial.webp" alt="Aspas Leviatan">
+            </div>
+        </div>
+        <div class="biografia">
+            <h3>Erick Santos, conhecido como Aspas, é um jogador profissional brasileiro de VALORANT esports. Nasceu em 15 de Junho de 2003 e atualmente representa o Brasil na organização Chulena Leviatan. Aspas é reconhecido por suas habilidades excepcionais e conquistas em campeonatos internacionais, incluindo o título no VCT Champions Tour Istambul e garregando o título de melhor duelista do mundo.</h3>
         </div>
     </div>
 
