--- a/PORTIFÓLIO/sobre-mim.html
+++ b/PORTIFÓLIO/sobre-mim.html
@@ -19,6 +19,7 @@
             background-color: rgb(0, 0, 0);
             border-radius: 50px;
             padding: 30px;
+            height: 100px;
         }
         a {
             text-decoration: none;
@@ -106,10 +107,16 @@
             margin-top: 20px;
             gap: 10px;
         }
+                
+       .vava img{
+       width: 190px;
+    }   
+        
     </style>
 </head>
 <body>
-    <header class="container">
+    <header class="container vava">
+        <img src="imagens/image_processing20231226-1-l1cfwf-Photoroom.png" alt="">
         <nav>
             <ul class="custom-ul">
                 <li><a href="index.html">HOME</a></li>
