--- a/PORTIFÓLIO/contatos.html
+++ b/PORTIFÓLIO/contatos.html
@@ -80,6 +80,13 @@
         }
         .lucas{
         width: 700px;   
+        align-items:center;
+        justify-content: left;
+        }
+        .sociais{
+            display: flex;
+       justify-content: right;
+       align-items: center;
         }
     </style>
 </head>
@@ -95,9 +102,14 @@
             </ul>
         </nav>
     </header>
-    <section>
-        <img class="lucas" src="imagens/GDkWct6aAAAqKO5-Photoroom.png" alt="">
-    </section>
+    <div class="container">
+        <img src="caminho/para/sua/imagem.jpg" alt="Lucas" class="lucas">
+        <div class="sociais">
+          <img src="caminho/para/icones/facebook.png" alt="Facebook">
+          <img src="caminho/para/icones/twitter.png" alt="Twitter">
+          <img src="caminho/para/icones/instagram.png" alt="Instagram">
+        </div>
+      </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRgO2Po4z1xlydbRYBx9kboC7Stj5l2l/Fq0I5gja" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
