--- a/PORTIFÓLIO/index.html
+++ b/PORTIFÓLIO/index.html
@@ -38,6 +38,7 @@
      height: 100px;
         }
         ul.custom-ul {
+            font-size: 20px;
             margin-bottom: 0;
             padding-left: 0; /* Remove o preenchimento padrão à esquerda */
             list-style-type: none; /* Remove os marcadores padrão */
@@ -69,7 +70,7 @@
         }
         
        .container .isa{
-       width: 179px;
+       width: 190px;
     }   
     .aspinhas{
       width: 350px;
