--- a/PORTIFÓLIO/contatos.html
+++ b/PORTIFÓLIO/contatos.html
@@ -34,13 +34,14 @@
             background-color: rgb(0, 0, 0);
             border-radius: 50px;
             padding: 30px;
-     width: 1920px;
-     height: 100px;
+            width: 1920px;
+            height: 100px;
         }
         ul.custom-ul {
             margin-bottom: 0;
             padding-left: 0; /* Remove o preenchimento padrão à esquerda */
             list-style-type: none; /* Remove os marcadores padrão */
+            font-size: 20px;
         }
         ul {
             text-decoration: none;
@@ -68,9 +69,9 @@
             transition: all 0.5s ease;
         }
         
-       .container img{
-       width: 190px;
-    }   
+        .container img{
+            width: 190px;
+        }   
         .custom-ul li a {
             text-decoration: none;
             color: #ffffff; /* Cor do texto dos links */
@@ -78,15 +79,36 @@
         .custom-ul li a:hover {
             color: #ffffff; 
         }
-        .lucas{
-        width: 700px;   
-        align-items:center;
-        justify-content: left;
-        }
-        .sociais{
+
+        .meu {
             display: flex;
-       justify-content: right;
-       align-items: center;
+            align-items: center;
+            justify-content: flex-start;
+            padding: 20px;
+            flex-grow: 1;
+        }
+        .meu img {
+            max-width: 700px;
+            height: auto;
+            margin-right: 20px; /* Adiciona espaçamento entre a imagem e o link */
+        }
+        .sociais {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+            gap: 10px; /* Espaçamento entre os ícones */
+        }
+        .sociais a {
+            display: flex;
+            color: white;
+            text-decoration: none; /* Remove o sublinhado padrão */
+            font-size: 18px;
+            padding: 30px;
+            font-size: 40px;
+        }
+        .sociais a:hover {
+            color: #742096; /* Cor ao passar o mouse, se necessário */
+           transition: all 1.3s;
         }
     </style>
 </head>
@@ -102,19 +124,19 @@
             </ul>
         </nav>
     </header>
-    <div class="container">
-        <img src="caminho/para/sua/imagem.jpg" alt="Lucas" class="lucas">
+    <div class="meu">
+        <img class="lucas" src="imagens/GDkWct6aAAAqKO5-Photoroom.png" alt="Lucas">
         <div class="sociais">
-          <img src="caminho/para/icones/facebook.png" alt="Facebook">
-          <img src="caminho/para/icones/twitter.png" alt="Twitter">
-          <img src="caminho/para/icones/instagram.png" alt="Instagram">
+          <a href="https://www.instagram.com/aspaszin/">Instagram</a> 
+          <a href="https://konect.gg/aspas">Konect</a>
+          <a href="https://www.tiktok.com/@aspaszin">Tik Tok</a>
+          <a href="https://www.vlr.gg/player/8480/aspas">STATS</a>
+          <a href="https://www.twitch.tv/aspaszin/">Twich</a>
         </div>
-      </div>
+    </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRgO2Po4z1xlydbRYBx9kboC7Stj5l2l/Fq0I5gja" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
-
 
