--- a/PORTIFÓLIO/contatos.html
+++ b/PORTIFÓLIO/contatos.html
@@ -19,10 +19,10 @@
             padding: 0;
         }
         body {
-            background: linear-gradient(180deg, #1f4f92, #37b5d1); /* Gradiente em tons de azul */
+            background: linear-gradient(180deg, #1f4f92, #37b5d1); 
             background-repeat: no-repeat; /* Impede a repetição do gradiente */
             background-attachment: fixed; /* Faz o gradiente cobrir toda a altura da página */
-            color: #ffffff; /* Cor do texto */
+            color: #ffffff; 
             font-family: "Poppins", sans-serif;
         }
         header {
@@ -74,7 +74,7 @@
         }   
         .custom-ul li a {
             text-decoration: none;
-            color: #ffffff; /* Cor do texto dos links */
+            color: #ffffff; 
         }
         .custom-ul li a:hover {
             color: #ffffff; 
@@ -90,25 +90,31 @@
         .meu img {
             max-width: 700px;
             height: auto;
-            margin-right: 20px; /* Adiciona espaçamento entre a imagem e o link */
+            margin-right: 20px; 
         }
         .sociais {
             display: flex;
-            align-items: center;
-            justify-content: flex-start;
-            gap: 10px; /* Espaçamento entre os ícones */
+            flex-wrap: wrap;
+            gap: 10px; 
+            margin-left: 10px;
         }
         .sociais a {
             display: flex;
+            align-items: center;
             color: white;
-            text-decoration: none; /* Remove o sublinhado padrão */
+            text-decoration: none;
             font-size: 18px;
-            padding: 30px;
-            font-size: 40px;
+            padding: 10px 20px;
+            border-radius: 20px;
+            background-color: rgba(0, 0, 0, 0.5);
         }
-        .sociais a:hover {
-            color: #742096; /* Cor ao passar o mouse, se necessário */
-           transition: all 1.3s;
+        .sociais img{
+            width: 70px;
+            margin-right: 10px;
+            border-radius: 10px; 
+        }
+        .konect{
+            width: 20px;
         }
     </style>
 </head>
@@ -127,11 +133,26 @@
     <div class="meu">
         <img class="lucas" src="imagens/GDkWct6aAAAqKO5-Photoroom.png" alt="Lucas">
         <div class="sociais">
-          <a href="https://www.instagram.com/aspaszin/">Instagram</a> 
-          <a href="https://konect.gg/aspas">Konect</a>
-          <a href="https://www.tiktok.com/@aspaszin">Tik Tok</a>
-          <a href="https://www.vlr.gg/player/8480/aspas">STATS</a>
-          <a href="https://www.twitch.tv/aspaszin/">Twich</a>
+            <a href="https://www.instagram.com/aspaszin/">
+                <img src="imagens/instagram_icon_logo-Photoroom.png" alt="">
+                Instagram
+            </a> 
+            <a href="https://konect.gg/aspas">
+                <img class="konect" src="imagens/apple-touch-icon.png" alt="">
+                Konect
+            </a>
+            <a href="https://www.tiktok.com/@aspaszin">
+                <img src="imagens/png-transparent-tiktok-social-media-logos-brands-icon-thumbnail-Photoroom.png" alt="">
+                Tik Tok
+            </a>
+            <a href="https://www.vlr.gg/player/8480/aspas">
+                <img src="imagens/unnamed.png" alt="">
+                STATS
+            </a>
+            <a href="https://www.twitch.tv/aspaszin/">
+                <img src="imagens/twitch-logo-twitch-logo-transparent-twitch-icon-transparent-free-free-png-Photoroom.png" alt="">
+                Twitch
+            </a>
         </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -139,4 +160,3 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
-
